fix: better spacing for small screens

--- a/src/routes/Home/index.module.scss
+++ b/src/routes/Home/index.module.scss
@@ -45,6 +45,14 @@
 
 @media screen and (max-width: 1050px) {
     .sections-container {
+        .text-section {
+            padding: 1rem 0;
+        }
+
+        .section-definition {
+            padding: 1rem;
+        }
+
         .section-mission {
             flex-direction: column;
             > * {
@@ -57,6 +65,7 @@
                 flex-direction: column;
 
                 .section-why-box {
+                    padding: 1rem;
                     width: 100%;
                 }
             }
